manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability
  namespace: monitoring
  annotations:
         ingressclass.kubernetes.io/is-default-class: "true"
         kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx-ingress
  rules:
   - host: grafana.domain.com
     http:
       paths:
        - path: /alertmanager
          backend:
           serviceName: grafana
           servicePort: 80
        - path: /grafana
          pathType: Prefix
          backend:
           serviceName: grafana
           servicePort: 80
        - path: /prometheus
          pathType: Prefix
          backend:
           serviceName: grafana
           servicePort: 80


---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx-ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
